修复了pkg/tools/getUser.go::getUser()中redis get方法调用参数错误
